Bug 1467552 - make VectorImage::Show force OP_OVER. r=bas